[tool.poetry]
name = "pdf-processor"
version = "0.1.0"
description = "PDF Processor for asynchronous and modular PDF handling"
authors = ["JeongJaeSoon <94jaesoon.jeong@gmail.com>"]
license = "Apache 2.0 License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
pypdf = "^4.0.1"
pytesseract = "^0.3.10"
pdf2image = "^1.17.0"
pycryptodome = "^3.20.0"
openai = "^1.12.0"
redis = "^5.0.1"
pydantic = "^2.6.1"
python-dotenv = "^1.0.1"
cryptography = "^42.0.2"
pymupdf = "^1.23.26"

[tool.poetry.group.dev.dependencies]
black = "^24.1.1"
isort = "^5.13.2"
flake8 = "^7.0.0"

[tool.black]
line-length = 100
target-version = ["py313"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
